[package]
name = "solace-monitor"
version = "0.0.1"
authors = ["Kegan Holtzhausen <Kegan.Holtzhausen@kindredgroup.com>"]
edition = "2018"

[dependencies]
solace_semp_client_monitor = { git = "https://github.com/unixunion/rust_solace_semp_client_monitor.git", branch="9.5-branch" }
hyper = "0.14.5"
hyper-tls = "0.1.4"
native-tls = "0.1.5"
colored = "1.7"
tokio-core = "0.1.6"
futures = "0.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_yaml = "0.8.12"
serde_json = "1.0.53"
clap = { version="2.32.0", features=["yaml"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
env_logger = "0.6.0"
std-logger = "0.3.2"
sha1 = "0.6.0"
influx_db_client = "^0.3.6"
time = "0.1.42"
itertools = "0.8"